[remoting host] Rate-limit capturer to 30FPS

For WebRTC-enabled connections, ensure capturer is not scheduled more
often than 30FPS, to limit CPU usage.

Bug: 816727
Change-Id: If2efd9de0749848f209fad7ed1926be108f402c3
Reviewed-on: https://chromium-review.googlesource.com/940449
Reviewed-by: Zijie He <zijiehe@chromium.org>
Commit-Queue: Lambros Lambrou <lambroslambrou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539957}
Former-commit-id: 65f6394de68d8e96184234f5b7c8bf1e80f699f1